Creando la arquitectura de la barra de navegacion

--- a/index.html
+++ b/index.html
@@ -8,6 +8,17 @@
     <link rel="stylesheet" href="./css/main.css">
 </head>
 <body>
-    
+    <!--2 Sessiones-->
+    <header>
+       <section></section>
+       <nav>
+           <section>
+               <a href="#">Logo</a>
+           </section>
+           <section>
+               <a href="perfil.html">Sobre mi</a>
+           </section>
+       </nav>
+    </header>
 </body>
 </html>
