Creando la primera seccion del Header de las redes sociales

--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
     <!--2 Sessiones-->
     <header>
         <!--- Iconos De Redes-->
-       <section>
-          <div>
+       <section class="header-icons-container">
+          <div class="icons">
               <a href="">Facebook</a>   
               <a href="">Twitter</a>
               <a href="">Instagram</a>
@@ -21,10 +21,10 @@
           </div>
        </section>
        <nav>
-           <section>
+           <section class="nav-logo-container">
                <a href="#">Logo</a>
            </section>
-           <section>
+           <section class="profile-link">
                <a href="perfil.html">Sobre mi</a>
            </section>
        </nav>
