Termine de Agregar los iconos de las redes sociales

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Blog Personal</title>
     <link rel="stylesheet" href="./css/main.css">
+    <link rel="stylesheet" href="./css/font/flaticon.css">
 </head>
 <body>
     <!--2 Sessiones-->
@@ -13,11 +14,11 @@
         <!--- Iconos De Redes-->
        <section class="header-icons-container">
           <div class="icons">
-              <a href=""><span></span></a>   
-              <a href=""><span></span></a>
-              <a href=""><span></span></a>
-              <a href=""><span></span></a>
-              <a href=""><span></span></a>
+              <a href=""><span class="fimanager flaticon-001-facebook"></span></a>   
+              <a href=""><span class="fimanager flaticon-002-twitter"></span></a>
+              <a href=""><span class="fimanager flaticon-011-instagram"></span></a>
+              <a href=""><span class="fimanager flaticon-010-linkedin"></span></a>
+              <a href=""><span class="fimanager flaticon-008-youtube"></span></a>
           </div>
        </section>
        <nav>
