Posicionando los elementos del home

--- a/index.html
+++ b/index.html
@@ -23,12 +23,21 @@
        </section>
        <nav>
            <section class="nav-logo-container">
-               <a href="#">Logo</a>
+               <a href="#"><img src="./assets/img/logo-personal.png" alt="Logo Personal"></a>
            </section>
            <section class="profile-link">
                <a href="perfil.html">Sobre mi</a>
            </section>
        </nav>
     </header>
+    <main class="home-main">
+        <section class="main-container-title">
+        <p class="home-main-text"> Conce las novedades y noticias del mundo Tech </p>
+        <button class="home-main-button">
+            <a href="blog.html"> Entra ya !</a>
+        </button>
+    
+    </section>  
+    </main>
 </body>
 </html>
