Agregamos el Grid de la parte principal de nuestra pagina, solo queda agregar la imagen de fondo

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="./css/main.css">
     <link rel="stylesheet" href="./css/font/flaticon.css">
 </head>
-<body>
+<section>
     <!--2 Sessiones-->
     <header>
         <!--- Iconos De Redes-->
@@ -31,13 +31,12 @@
        </nav>
     </header>
     <main class="home-main">
-        <section class="main-container-title">
-        <p class="home-main-text"> Conce las novedades y noticias del mundo Tech </p>
-        <button class="home-main-button">
-            <a href="blog.html"> Entra ya !</a>
-        </button>
-    
-    </section>  
+         <section>
+            <p class="home-main-text"> Conce las novedades y noticias del mundo Tech </p>
+            <button class="home-main-button">
+                <a href="blog.html"> Entra ya !</a>
+        </button>  
+    </section> 
     </main>
 </body>
 </html>
