Agregando foto de portada del blog principal

--- a/blogs.html
+++ b/blogs.html
@@ -22,7 +22,7 @@
        </section>
        <nav>
            <section class="nav-logo-container">
-               <a href="#"><img src="./assets/img/logo-personal.png" alt="Logo Personal"></a>
+               <a href="index.html"><img src="./assets/img/logo-personal.png" alt="Logo Personal"></a>
            </section>
            <section class="profile-link">
                <a href="perfil.html">Sobre mi</a>
@@ -35,7 +35,7 @@
     <div class="blogs-main-new">
          <h3>Soy un titulo</h3>
          <div class="blogs-news-img-container">
-             <img src="/" alt="">
+             <img src="./assets/img/image-blog-portada.png" alt="">
          </div>
          <div class="blogs-news-info-container">
             <h2>Título del Blogpost</h2>
