--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="./css/main.css">
     <link rel="stylesheet" href="./css/font/flaticon.css">
 </head>
+<body class="home-body">
 <section>
     <!--2 Sessiones-->
     <header>
@@ -23,7 +24,7 @@
        </section>
        <nav>
            <section class="nav-logo-container">
-               <a href="#"><img src="./assets/img/logo-personal.png" alt="Logo Personal"></a>
+               <a href="index.html"><img src="./assets/img/logo-personal.png" alt="Logo Personal"></a>
            </section>
            <section class="profile-link">
                <a href="perfil.html">Sobre mi</a>
