--- a/blog.html
+++ b/blog.html
@@ -6,8 +6,65 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Blog Personal</title>
     <link rel="stylesheet" href="./css/main.css">
+    <link rel="stylesheet" href="./css/font/flaticon.css">
 </head>
 <body>
-    
+    <section>
+        <!--2 Sessiones-->
+        <>
+            <!--- Iconos De Redes-->
+           <section class="header-icons-container">
+              <div class="icons">
+                  <a href=""><span class="fimanager flaticon-001-facebook"></span></a>   
+                  <a href=""><span class="fimanager flaticon-002-twitter"></span></a>
+                  <a href=""><span class="fimanager flaticon-011-instagram"></span></a>
+                  <a href=""><span class="fimanager flaticon-010-linkedin"></span></a>
+                  <a href=""><span class="fimanager flaticon-008-youtube"></span></a>
+              </div>
+           </section>
+            <nav>
+               <section class="nav-logo-container">
+                   <a href="index.html"><img src="./assets/img/logo-personal.png" alt="Logo Personal"></a>
+               </section>
+               <section class="profile-link">
+                   <a href="perfil.html">Sobre mi</a>
+               </section>
+           </nav>
+        </header>
+        <main>
+         <section class="grid-container blogpost-img-container">
+             <img src="/" alt="">
+         </section>
+         <section class="blogpost-main-container">
+             <div class="grid-container">
+                 <h3></h3>
+                 <article>
+                     <h1></h1>
+                     <p></p>
+                     <p></p>
+                     <p></p>
+                 </article>
+             </div>
+         </section>
+         <section class="contact-main-container">
+             <div>
+                 <img src="" alt="">
+                 <div class="contact-left">
+                     <a href=""></a>
+                     <p></p>
+                 </div>
+             </div>
+             <div>
+                 <img src="" alt="">
+                 <div class="contact-right">
+                     <a href=""></a>
+                     <p></p>
+                 </div>
+             </div>
+         </section>
+        </main>
+        <footer>
+            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit.</p>
+        </footer>
 </body>
 </html>
