Agregando estilos al parrafo principal del blogpost

--- a/blog.html
+++ b/blog.html
@@ -11,7 +11,7 @@
 <body>
     <section>
         <!--2 Sessiones-->
-        <>
+        <header>
             <!--- Iconos De Redes-->
            <section class="header-icons-container">
               <div class="icons">
@@ -22,7 +22,7 @@
                   <a href=""><span class="fimanager flaticon-008-youtube"></span></a>
               </div>
            </section>
-            <nav>
+           <nav>
                <section class="nav-logo-container">
                    <a href="index.html"><img src="./assets/img/logo-personal.png" alt="Logo Personal"></a>
                </section>
@@ -31,18 +31,19 @@
                </section>
            </nav>
         </header>
-        <main>
+    <main>
          <section class="grid-container blogpost-img-container">
-             <img src="/" alt="">
+             <img src="/assets/img/image-blog-portada.png" alt="">
          </section>
          <section class="blogpost-main-container">
              <div class="grid-container">
-                 <h3></h3>
+                 <h3>Noticias</h3>
                  <article>
-                     <h1></h1>
-                     <p></p>
-                     <p></p>
-                     <p></p>
+                     <h1>Titulo Del Blogpost</h1>
+                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequatur aut dolorem modi consequuntur nihil quod, ratione possimus iste temporibus optio Lorem ipsum dolor sit, amet consectetur adipisicing elit. Aliquid atque delectus, itaque aliquam labore iste error nesciunt ab suscipit dolorem minus sapiente, vitae temporibus. Neque esse veritatis similique optio, reiciendis molestias praesentium officia distinctio, incidunt ea animi vero corrupti veniam, reprehenderit cupiditate quaerat maiores! Totam, itaque reprehenderit! Aliquid, sint alias!
+                     </p>
+                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Possimus reprehenderit officia, minus obcaecati laudantium ipsam porro voluptate et nihil magni! Lorem ipsum dolor sit amet, consectetur adipisicing elit. Placeat eum eveniet tenetur, nihil delectus magnam exercitationem amet laboriosam corrupti repellendus et esse nisi suscipit! Eveniet delectus corrupti omnis quas cumque, consequuntur, debitis soluta est, accusantium ratione placeat possimus quod qui tenetur! Harum fugit distinctio rem eum incidunt laudantium, eligendi commodi!</p>
+                     <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Consequuntur fuga quia aspernatur culpa aliquam quaerat, temporibus ratione hic architecto neque. Lorem ipsum dolor sit amet consectetur adipisicing elit. Ut et aperiam nam vero hic commodi debitis voluptas harum, accusamus, provident, quos libero aliquam doloribus deleniti sint nesciunt quis? Aperiam libero expedita necessitatibus soluta voluptatibus, exercitationem nam placeat officia tenetur voluptatum? Placeat laudantium velit at rerum minima alias tenetur vitae animi.</p>
                  </article>
              </div>
          </section>
