--- a/blog.html
+++ b/blog.html
@@ -49,17 +49,19 @@
          </section>
          <section class="contact-main-container">
              <div>
-                 <img src="" alt="">
+                 <img src="./assets/img/like.png" alt="">
                  <div class="contact-left">
-                     <a href=""></a>
-                     <p></p>
+                     <a href="">Contacto</a>
+                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Cupiditate molestias rerum recusandae laudantium.
+                     </p>
                  </div>
              </div>
              <div>
-                 <img src="" alt="">
+                 <img src="./assets/img/newsletter.png" alt="">
                  <div class="contact-right">
-                     <a href=""></a>
-                     <p></p>
+                     <a href="">Escribe</a>
+                     <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nisi quibusdam eaque reprehenderit in quam non.
+                     </p>
                  </div>
              </div>
          </section>
