Agregando las clases y maquetado a la pagina de perfil

--- a/perfil.html
+++ b/perfil.html
@@ -6,8 +6,86 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Blog Personal</title>
     <link rel="stylesheet" href="./css/main.css">
+    <link rel="stylesheet" href="./css/font/flaticon.css">
 </head>
 <body>
-    
+    <section>
+        <!--2 Sessiones-->
+        <header>
+            <!--- Iconos De Redes-->
+           <section class="header-icons-container">
+              <div class="icons">
+                  <a href=""><span class="fimanager flaticon-001-facebook"></span></a>   
+                  <a href=""><span class="fimanager flaticon-002-twitter"></span></a>
+                  <a href=""><span class="fimanager flaticon-011-instagram"></span></a>
+                  <a href=""><span class="fimanager flaticon-010-linkedin"></span></a>
+                  <a href=""><span class="fimanager flaticon-008-youtube"></span></a>
+              </div>
+           </section>
+           <nav>
+               <section class="nav-logo-container">
+                   <a href="index.html"><img src="./assets/img/logo-personal.png" alt="Logo Personal"></a>
+               </section>
+               <section class="profile-link">
+                   <a href="perfil.html">Sobre mi</a>
+               </section>
+           </nav>
+        </header>
+        <main>
+
+        
+        <!-- Hay 2 sessiones -->
+        <!--Section Profile Img personal-->
+        <section class="profile-main-container">
+        <!--Contenedor con el Grid container--> 
+        <div class="grid-container">
+             <div>
+                 <img src="" alt="Foto de Perfil">
+             </div>
+            <!--Info-->
+             <div>
+                 <h2></h2>
+                 <p></p>
+             </div>
+         </div>
+        </section>
+        <!--Info de los Proyectos-->
+        <section class="profile-main-proyects">
+           <div class="grid-container">
+               <h3></h3>
+               <!--Contenedor con los 3 proyectos-->
+               <div class="poryects-main-container">
+                <article class="proyect-container">
+                    <h4></h4>
+                    <p></p>
+                </article>
+               </div>
+           </div>
+        </section>
+
+
+        <section class="contact-main-container">
+            <div>
+                <img src="./assets/img/like.png" alt="">
+                <div class="contact-left">
+                    <a href="">Contacto</a>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Cupiditate molestias rerum recusandae laudantium.
+                    </p>
+                </div>
+            </div>
+            <div>
+                <img src="./assets/img/newsletter.png" alt="">
+                <div class="contact-right">
+                    <a href="">Escribe</a>
+                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nisi quibusdam eaque reprehenderit in quam non.
+                    </p>
+                </div>
+            </div>
+        </section>
+       </main>
+       <footer>
+           <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit.</p>
+       </footer>
+    </main>
 </body>
 </html>
