Finalizando la pagina de Perfil

--- a/perfil.html
+++ b/perfil.html
@@ -31,33 +31,39 @@
                </section>
            </nav>
         </header>
-        <main>
-
-        
+       <main>
         <!-- Hay 2 sessiones -->
         <!--Section Profile Img personal-->
         <section class="profile-main-container">
         <!--Contenedor con el Grid container--> 
-        <div class="grid-container">
+        <div class="grid-container profile-container">
              <div>
-                 <img src="" alt="Foto de Perfil">
+                 <img src="./assets/img/image-blog-article.jpg" alt="Foto de Perfil">
              </div>
             <!--Info-->
              <div>
-                 <h2></h2>
-                 <p></p>
+                 <h2>Hola, mi nombre es Juan Gui Are!</h2>
+                 <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quam quo error unde magnam, dolor nisi porro voluptatem ad maiores. Corporis perspiciatis beatae, odio maxime necessitatibus quisquam odit amet qui exercitationem.</p>
              </div>
          </div>
         </section>
         <!--Info de los Proyectos-->
         <section class="profile-main-proyects">
            <div class="grid-container">
-               <h3></h3>
+               <h3>Proyectos</h3>
                <!--Contenedor con los 3 proyectos-->
                <div class="poryects-main-container">
                 <article class="proyect-container">
-                    <h4></h4>
-                    <p></p>
+                    <h4>Titulo</h4>
+                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Enim, esse earum quibusdam vel, ab repudiandae in est voluptatibus beatae aperiam molestias nobis fuga soluta ipsum nesciunt mollitia deserunt facilis illo.</p>
+                </article>
+                <article class="proyect-container">
+                    <h4>Titulo</h4>
+                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Enim, esse earum quibusdam vel, ab repudiandae in est voluptatibus beatae aperiam molestias nobis fuga soluta ipsum nesciunt mollitia deserunt facilis illo.</p>
+                </article>
+                <article class="proyect-container">
+                    <h4>Titulo</h4>
+                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Enim, esse earum quibusdam vel, ab repudiandae in est voluptatibus beatae aperiam molestias nobis fuga soluta ipsum nesciunt mollitia deserunt facilis illo.</p>
                 </article>
                </div>
            </div>
